--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/**/*.js --fix",
-    "jsdoc": "jsdoc -c ./docs/config/jsdoc.config.json"
+    "lint": "eslint ./src/**/*.js --fix"
   },
   "repository": {
     "type": "git",
@@ -28,5 +27,20 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
     "superagent": "^5.1.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
