--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test:update": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/**/*.js --fix"
   },
