--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
     "react-test-renderer": "^16.12.0",
+    "sass": "^1.25.0",
     "superagent": "^5.1.0"
   },
   "eslintConfig": {
